# QR-LEGENDS

./: .env.example  .gitignore  .replit  COPYRIGHT  DEBUG_REPORT.md  README.md  RESPONSIVE_DESIGN.md  WAREHOUSE_OS_REBUILD.md  backup_service.py  company_integrations.py  company_website_integration.py  debug_server.py  erp_core.py  fix_js_syntax.py  generate_demo_data.py  hr_payroll_module.py  import_test.py  index.html  index.js  integration_api.py  main.py  manufacturing_module.py  patent_filing_generator.py  project_management_module.py  pyproject.toml  qr_workflow_engine.py  quick_button_test.py  quick_page_test.py  render.yaml  replit.md  requirements.txt  salespad_module.py  startup.py  syntax_check.py  test_all_pages.py  test_results.json  warehouse_navigation.py
data/: example_companies.json  example_employees.json  example_inventory_items.json  example_settings.json
mobile-app/: config.xml  package.json
static/: 404.html  500.html  DESIGN_STRATEGY.md  access_denied.html  accounts_payable.html  accounts_receivable.html  admin_dashboard.html  admin_freight.html  admin_hub.html  admin_scheduling.html  admin_tracking.html  ai_demand_prediction.html  ai_item_finder.html  ai_route_optimization.html  ai_settings.html  ai_warehouse_assistant.html  analytics_dashboard.html  app_installer.html  apply_professional_styling.js  asn_detail.html  asn_list.html  asn_vendor_form.html  auto_theme_injector.js  backup_management.html  billing_dashboard.html  billing_notification_panel.html  board_reporting.html  branch_manager_widget.html  branch_security_cameras.html  (+227 more)
(+1 files in other folders)
