[project]
name = "dc-legends-warehouse-os"
version = "1.0.0"
description = "Mobile-first warehouse operating system built with Flask."
requires-python = ">=3.11"
dependencies = [
    "flask-session>=0.8.0",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "gunicorn>=23.0.0",
    "pillow>=11.3.0",
    "qrcode[pil]>=8.2",
    "requests>=2.32.4",
    "werkzeug>=3.1.3",
    "python-magic>=0.4.27",
    "pyotp>=2.9.0",
]
